# bilibili-grok

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
src/grok/: __init__.py  agent.py  config.py  context.py  db.py  health.py  logger.py  login.py  main.py  mention.py  reply.py
src/plugins/: __init__.py
src/plugins/tools/: __init__.py  search.py
tests/: __init__.py  conftest.py  test_agent.py  test_config.py  test_context.py  test_db.py  test_health.py  test_logger.py  test_mention.py  test_reply.py
